# medicine-authorship

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  setup.cfg
core/: __init__.py  ce_diff_test_umap.py  plot_utils.py
data/: __init__.py  article.py  benchmark.py  entrez.py  journal.py
scripts/: build_gender_df.py  embed_titles.py  get_citations_and_references.py  predict_gender.py  run_analysis.py
scripts/plots/: make_citations_and_references_plot.py  make_gender_frequency_plot.py  make_journal_sjr_plot.py  make_paper_gender_proportions_plot.py
src/gendercast/: __init__.py  gendercast.py  registry.py
src/gendercast/database/: __init__.py  wgnd_wrapper.py
src/gendercast/llm/: __init__.py  gpt_oss.py
src/namecast/: __init__.py  benchmarks.py  namecast.py  registry.py  spec.py
src/namecast/database/: __init__.py  damegender_wrapper.py  genderizer3_wrapper.py
src/namecast/llm/: hf.py
tests/: test_genders.py
