[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gendercast"
version = "1.0.0"
description = "Gender prediction tool using LLMs and database methods"
readme = "README.md"
requires-python = ">3.7"
license = {file = "LICENSE"}
keywords = ["gender-prediction", "gender-guesser"]
authors = [
  {name = "Michael S. Yao", email = "michael.yao@pennmedicine.upenn.edu"},
]
maintainers = [
  {name = "Michael S. Yao", email = "michael.yao@pennmedicine.upenn.edu"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "requests",
  "tqdm",
  "transformers",
  "datasets",
  "torch",
  "genderizer3",
  "gender_guesser",
  "global_gender_predictor",
  "openai",
  "accelerate",
  "click",
  "umap-learn",
  "thefuzz",
  "statsmodels",
  "gender_extractor",
  "unidecode"
]

[project.urls]
"Homepage" = "https://github.com/michael-s-yao/medicine-authorship"

[tool.setuptools.packages.find]
where = ["src"]
